@@ -1,6 +1,7 @@
 2007-03-01  Jakub Steiner <jimmac@ximian.com>
 
-	* index.theme.in: categories weren't listed in 32x32 and scalable
+	* index.theme.in: categories weren't listed in 32x32 and scalable.
+		apps in scalable
 
 2007-02-28  Jakub Steiner <jimmac@ximian.com>
 
